# nifti-qc

./: .gitignore  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: action-selftest.yml  ci.yml  publish.yml
docs/: qform-sform-in-practice.md
src/nifti_qc/: __init__.py  checks.py  cli.py  core.py
tests/: conftest.py  test_checks.py
